--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,7 @@
 
     <string name="press_once_again_to_exit_">Press once again to exit!</string>
     <string name="more_info"><u>More Info</u></string>
+    <string name="no_11_ash_road_woodlands_lusaka_zambia">No.11 Ash Road,\nWoodlands,Lusaka,\nZambia</string>
+    <string name="phone_260_211_269483_260_955_108080">Phone: +260 211 269483,\n+260 955 108080</string>
 
 </resources>
